apps/actual/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: apps-actual
spec:
  selector:
    app: actual
  ports:
    - name: http
      port: 80
      targetPort: 5006
